--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1961,7 +1961,8 @@
         "witness_pay": "Вывести зарплату заверителя на аккаунт",
         "witness_receive": "Получен заверителем от заверителя",
         "witness_update": "{account} обновил свою информацию о заверителе",
-        "worker_create": "{account} создал рабочее предложение с ежедневной оплатой в размере {pay}"
+        "worker_create": "{account} создал рабочее предложение с ежедневной оплатой в размере {pay}",
+        "unknown_operation": "Неизвестная операция"
     },
     "page404": {
         "asset_not_found_subtitle": "Такого актива не существует",
