feat: add update witness function

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -419,6 +419,7 @@
             "info": "Info",
             "join_committee": "Join committee",
             "join_witnesses": "Join Witnesses",
+            "update_witness": "Update Witness",
             "line": "Line",
             "max_pay": "Maximum total pay",
             "missing": "Needed",
